applications/openeuler-certificate-center/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-certificate-center
  name: openeuler-certificate-center
