applications/openeuler-certificate-center/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: openeuler-certificate-center
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/certificate-center:397b778d502659cbaadcb1d71794401ac0fcd94e
          imagePullPolicy: IfNotPresent
          name: website
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 500Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
