applications/openeuler-certificate-center/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: openeuler-certificate-center
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: website
  type: ClusterIP
